relocated index for git pages

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -5,8 +5,10 @@
 <body class="main-container main-bg">
 <nav th:replace="partials :: navbar"></nav>
 <main class="container">
-<h1>Welcome To Posters!!!</h1>
-    <h2>add some more detail and make it like a blog</h2>
+<div>
+    <h1>Welcome New User!</h1>
+    <h2>or welcome back.<a>Link to login page</a></h2>
+</div>
 </main>
 <footer th:replace="partials :: footer"></footer>
 <div th:replace="partials :: foot-script"></div>
